# rust-lib

./: Cargo.toml  README.md  run
.github/: settings.yml
.github/workflows/: rust.yml
docs/: CONTRIBUTING.md  release-policy.md
internal/shapely-macros/src/: derive_iterator.rs
proc-macro/enso-shapely-macros/: Cargo.toml
src/automata/: Cargo.toml
src/automata/src/: alphabet.rs  dfa.rs  nfa.rs  pattern.rs  state.rs  symbol.rs
src/automata/tests/: automata_exports.rs
src/data/: Cargo.toml
src/data/src/: dependency_graph.rs  diet.rs  hash_map_tree.rs  interval_tree.rs  interval_tree2.rs  lib.rs  opt_vec.rs  text.rs
src/enso-macro-utils/src/: lib.rs
src/enso-prelude/: Cargo.toml
src/enso-shapely/: Cargo.toml
src/flexer/: Cargo.toml
src/generics/: Cargo.toml
src/lazy-reader/: Cargo.toml
src/logger/: Cargo.toml
src/logger/src/: disabled.rs  enabled.rs  entry.rs  formatter.rs  level.rs  lib.rs  logger.rs  macros.rs  message.rs  ops.rs  processor.rs  sink.rs
src/logger/src/consumer/: js_console.rs
src/logger/src/entry/: entry.rs  level.rs
src/logger/src/formatter/: js_console.rs
src/logger/src/processor/: consumer.rs  formatter.rs
src/logger/src/processor/consumer/: js_console.rs
src/logger/src/processor/formatter/: js_console.rs
src/logger/src/sink/: consumer.rs
src/logger/src/sink/consumer/: class.rs  js_console.rs
src/logger/src/sink/formatter/: class.rs  js_console.rs
src/macro-utils/: Cargo.toml
src/optics/: Cargo.toml
src/prelude/: Cargo.toml
src/shapely/: Cargo.toml
src/shapely-macros/: Cargo.toml
(+36 files in other folders)
