[package]
name    = "enso-logger"
version = "0.1.1"
authors = ["Enso Team <contact@luna-lang.org>"]
edition = "2018"

[lib]

[features]
default = []

[dependencies]
enso-prelude = { version = "0.1.1" , path = "../prelude" }
enso-shapely = { version = "0.1.1" , path = "../shapely/impl" }
wasm-bindgen = { version = "=0.2.58", features = ["nightly"]       }

[dependencies.web-sys]
version = "0.3.4"
features = ['console']
